[package]
name = "distributor"
version = "0.1.0"
authors = ["iliayar <iliayar3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0", features = [ "derive" ] }
log = "0.4"
env_logger = "0.9"
aes = "0.8.2"
