[package]
name = "clock"
version = "0.1.0"
authors = ["iliayar <iliayar3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
derive_builder = "0.11.2"
thiserror = "1.0.37"
anyhow = "1.0.66"
chrono = "0.4"
rstest = "0.16"

