# [package]
# name = "lab4"
# version = "0.1.0"
# authors = ["iliayar <iliayar3@gmail.com>"]
# edition = "2018"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
[workspace]
members = [
	"parsgen",
	"gramma",
]

exclude = [
	"calc/calc",
	"lab2/sign",
	"lab3/calc",
	"ngramma",
]