[package]
name = "rust"
version = "0.1.0"
authors = ["iliayar <iliayar3@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"

