[package]
name = "bridge"
version = "0.1.0"
authors = ["iliayar <iliayar3@gmail.com>"]
edition = "2018"

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
derive_builder = "0.11.2"
thiserror = "1.0.37"
anyhow = "1.0.66"
iced = { version = "0.6", features = [ "canvas" ] }
sdl2 = { version = "0.35", features = [ "gfx", "ttf" ] }
crossfont = "0.5"
futures = "0.3"
clap = { version = "4.0", features = [ "derive" ]}