cabal-version:      2.4
name:               hw1
version:            0.1.0.0

author:             iliayar
maintainer:         iliayar3@gmail.com

library
    exposed-modules: HW1.T1
                     HW1.T2
                     HW1.T3
                     HW1.T4
                     HW1.T5
                     HW1.T6
                     HW1.T7

    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    ghc-options: -Wall -Werror
    default-language: Haskell2010
