cabal-version:      2.4
name:               hw2
version:            0.1.0.0

author:             iliayar
maintainer:         iliayar3@gmail.com

library
    exposed-modules: HW2.T1
                     HW2.T2
                     HW2.T3
                     HW2.T4
                     HW2.T5
                     HW2.T6

    build-depends:    base ^>=4.14.1.0,
                      scientific
    hs-source-dirs:   src
    ghc-options: -Wall -Werror
    default-language: Haskell2010
